--- a/src/app/application/deployment-verification/deployment-verification.component.less
+++ b/src/app/application/deployment-verification/deployment-verification.component.less
@@ -266,3 +266,9 @@ paddingLeftRight5
 {
   color:#a32133 !important;
 }
+.modal-width
+{
+  max-width: 100% !important;
+  width: 80% !important;
+  min-height: 400px;
+}
