--- a/src/app/application/application-dashboard/application-dashboard.component.less
+++ b/src/app/application/application-dashboard/application-dashboard.component.less
@@ -370,7 +370,7 @@
 	font-size: 14px;
   }
   .fa-spin {
-	color: #009bfa !important;
+	color: #999 !important;
   }
   .no-applications {
 	  padding: 20px;
