--- a/src/app/application/deployment-verification/deployment-verification.component.less
+++ b/src/app/application/deployment-verification/deployment-verification.component.less
@@ -244,7 +244,7 @@ paddingLeftRight5
   color: #dc3545; 
 }
 .fa-spinner {
-  color: #009bfa;
+  color: #999;
 }
 .showElementHover {
 	cursor: pointer !important;
@@ -253,7 +253,7 @@ paddingLeftRight5
   font-size: 14px;
 }
 .fa-spin {
-  color: #009bfa;
+  color: #999;
 }
 .stop-icon {
   padding: 3px;
