--- a/src/app/application/deployment-verification/deployment-verification.component.html
+++ b/src/app/application/deployment-verification/deployment-verification.component.html
@@ -81,7 +81,7 @@
           </div>
         </div>
   </div>
-      <table class="table table-sm table-avenir table-no-bordered table-no-dots">
+      <table class="table table-sm table-avenir table-no-bordered table-no-dots table-responsive">
         <tbody>
           <tr *ngIf="serviceListLength > 0">
             <th >Service</th>
