--- a/src/app/application/deployment-verification/deployment-verification.component.html
+++ b/src/app/application/deployment-verification/deployment-verification.component.html
@@ -477,14 +477,15 @@
                 <div class="summaryToggleBtn d-flex ml20">
                   <div class="chart_ratio mb-2 text-center d-flex   ">
                     <div class="chart_value flex-grow-1 padding10LeftRight"  [ngClass]= "{'cv_high':serviceNameInfo['status'] === 'Success','cv_low':serviceNameInfo['status'] === 'Fail','cv_medium':serviceNameInfo['status'] === 'Review'}">
-                      <div class="cv_heighlight">{{serviceNameInfo['finalScore']}}</div>
-                      <div class="cv_heighlight"  [ngClass]= "{'text-danger':serviceNameInfo['status'] === 'Fail','text-success':serviceNameInfo['status'] === 'Success','text-warning':serviceNameInfo['status'] === 'Review','text-muted':serviceNameInfo['status'] === 'InProgress'}">{{serviceNameInfo['status']}}</div>                      
+                      <div class="cv_heighlight"  *ngIf="serviceNameInfo['finalScore']>-1">{{serviceNameInfo['finalScore']}}</div>
+                      <div class="cv_heighlight" *ngIf="serviceNameInfo['finalScore']>-1"  [ngClass]= "{'text-danger':serviceNameInfo['status'] === 'Fail','text-success':serviceNameInfo['status'] === 'Success','text-warning':serviceNameInfo['status'] === 'Review','text-muted':serviceNameInfo['status'] === 'InProgress'}">{{serviceNameInfo['status']}}</div>                      
+                      <div class="cv_heighlight"  *ngIf="serviceNameInfo['finalScore']<0"> - </div>
                       
                     </div>
                     
                   </div>
                   <div *ngIf="deploymentApplicationHealth['analysisType'] === 'Metrics Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'" class="chart_ratio mb-2 text-center d-flex widthDetailScore ml20">
-                    <div class="chart_value cv_low flex-grow-1">
+                    <div class="chart_value flex-grow-1" [ngClass]= "{'cv_high':serviceNameInfo['metricScore'] >= deploymentApplicationHealth['maximumCanaryScore'],'cv_low':serviceNameInfo['metricScore'] <= deploymentApplicationHealth['minimumCanaryScore'],'cv_medium':serviceNameInfo['metricScore'] < deploymentApplicationHealth['maximumCanaryScore'] && serviceNameInfo['metricScore'] > deploymentApplicationHealth['minimumCanaryScore']}">
                       <div class="cv_heighlight" *ngIf="serviceNameInfo['metricScore']>-1" [ngClass]= "{'text-danger':serviceNameInfo['metricScore'] <= deploymentApplicationHealth['minimumCanaryScore'],'text-success':serviceNameInfo['metricScore'] >= deploymentApplicationHealth['maximumCanaryScore'],'text-warning':serviceNameInfo['metricScore'] < deploymentApplicationHealth['maximumCanaryScore'] && serviceNameInfo['metricScore'] > deploymentApplicationHealth['minimumCanaryScore']}">{{serviceNameInfo['metricScore']}}</div>
                       <div class="cv_heighlight" *ngIf="serviceNameInfo['metricScore']<0 || serviceNameInfo['metricScore']==null"> - </div>
                       <!-- /.cv_heighlight -->
