--- a/src/app/application-onboarding/data-source/data-source.component.less
+++ b/src/app/application-onboarding/data-source/data-source.component.less
@@ -18,6 +18,7 @@ tbody{
 	opacity: 0.3;
 	pointer-events: none;
 }
-// pointer-events: none;
-//     opacity: .5;
-// }
+.disabledbtn{
+	pointer-events: none;
+	opacity: 0.4;
+}
