--- a/src/app/application/deployment-verification/deployment-verification.component.html
+++ b/src/app/application/deployment-verification/deployment-verification.component.html
@@ -257,8 +257,8 @@
           </div>
           <div class="modal-footer">
             <button type="submit" class="btn btn-default" data-dismiss="modal" aria-label="Close">Cancel</button>
-            <button type="submit" class="btn  btn-primary"*ngIf = "selectedManualTriggerTab === 'manualTrigger-form-tab'" (click)="submitManualTriggerData()">Trigger</button>
-            <button type="submit" class="btn  btn-primary"*ngIf = "selectedManualTriggerTab === 'manualTrigger-editor-tab'" (click)="submitManualTriggerData()">Trigger</button>
+            <button type="submit" class="btn  btn-primary"*ngIf = "selectedManualTriggerTab === 'manualTrigger-form-tab'" (click)="submitManualTriggerData()" data-dismiss="modal">Trigger</button>
+            <button type="submit" class="btn  btn-primary"*ngIf = "selectedManualTriggerTab === 'manualTrigger-editor-tab'" (click)="submitManualTriggerData()" data-dismiss="modal">Trigger</button>
           </div>
           <!-- /.modal-footer -->
         </div>
